# consolecast

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/cdc_acm_host/: cdc_acm_host.c
main/: CMakeLists.txt  cc_cdc_acm.c  cc_cdc_acm.h  cc_http.c  cc_http.h  cc_indicator.c  cc_indicator.h  cc_uart.c  cc_uart.h  cc_webserver.c  cc_webserver.h  cc_websocket.c  cc_websocket.h  cc_wifi.c  cc_wifi.h  cdc_class.c  comm_settings.h  component.mk  ctrl_pipe.c  defines.h  keep_alive.c  keep_alive.h  main.c  parse_data.c  usb_host_port.c
main/certs/: cacert.pem  prvtkey.pem
main/example/: README.md  xdm2041.html
main/html/: index.html  xterm.js
